ELS Code/main/default/objects/Survey__c/fields/Able_to_Use_Digital_Check_in__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Use_Digital_Check_in__c</fullName>
    <label>Able to Use Digital Check-in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>