ELS Code/main/default/objects/Survey__c/fields/Amenities_Number__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Number__c</fullName>
    <formula>VALUE(TEXT( Amenities__c ))</formula>
    <label>Amenities Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>