ELS Code/main/default/objects/Survey__c/fields/Bathroom_Number__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Number__c</fullName>
    <formula>VALUE(TEXT( Bathrooms_cleaned_and_stocked__c ))</formula>
    <label>Bathroom Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>