ELS Code/main/default/objects/Survey__c/fields/Bathrooms_cleaned_and_stocked__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_cleaned_and_stocked__c</fullName>
    <label>Bathroom Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>