ELS Code/main/default/objects/Survey__c/fields/Cabin_Rating__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Rating__c</fullName>
    <formula>Value(text(Rating_for_Cabin_Rental__c))</formula>
    <label>Cabin Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>