ELS Code/main/default/objects/Survey__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>TextArea</type>
</CustomField>