ELS Code/main/default/objects/Survey__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <formula>Reservation_ID__r.Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Date</label>
    <type>Date</type>
</CustomField>