ELS Code/main/default/objects/Survey__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <formula>Reservation_ID__r.Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Date</label>
    <type>Date</type>
</CustomField>