ELS Code/main/default/objects/Survey__c/fields/Checked_In_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_By__c</fullName>
    <label>Checked In By</label>
    <type>TextArea</type>
</CustomField>