ELS Code/main/default/objects/Survey__c/fields/Checked_Out_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_By__c</fullName>
    <label>Checked Out By</label>
    <type>TextArea</type>
</CustomField>