ELS Code/main/default/objects/Survey__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <formula>Reservation_ID__r.ClientID__r.ClientID_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>