ELS Code/main/default/objects/Survey__c/fields/Common_Areas_Number__c.field-meta.xml
<CustomField>
    <fullName>Common_Areas_Number__c</fullName>
    <formula>VALUE(TEXT(Grounds_and_buildings_cared_for__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Common Areas Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>