ELS Code/main/default/objects/Survey__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <type>TextArea</type>
</CustomField>