ELS Code/main/default/objects/Survey__c/fields/Created_Date_Past_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Past_Year__c</fullName>
    <formula>IF( TODAY() - DATEVALUE(CreatedDate)  &lt;= 365, True, False)</formula>
    <label>Created Date (Past Year)</label>
    <type>Checkbox</type>
</CustomField>