ELS Code/main/default/objects/Survey__c/fields/CusIp__c.field-meta.xml
<CustomField>
    <fullName>CusIp__c</fullName>
    <label>CusIp</label>
    <length>225</length>
    <type>Text</type>
</CustomField>