ELS Code/main/default/objects/Survey__c/fields/Did_we_have_plenty_of_equipment__c.field-meta.xml
<CustomField>
    <fullName>Did_we_have_plenty_of_equipment__c</fullName>
    <label>Did we have plenty of equipment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>