ELS Code/main/default/objects/Survey__c/fields/Did_we_have_the_activities_you_expected__c.field-meta.xml
<CustomField>
    <fullName>Did_we_have_the_activities_you_expected__c</fullName>
    <label>Did we have the activities you expected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>