ELS Code/main/default/objects/Survey__c/fields/Did_you_get_a_warm_genuine_welcome__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_a_warm_genuine_welcome__c</fullName>
    <label>Did you get a warm, genuine welcome?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>