ELS Code/main/default/objects/Survey__c/fields/Digital_Check_in_Enhance_Stay__c.field-meta.xml
<CustomField>
    <fullName>Digital_Check_in_Enhance_Stay__c</fullName>
    <label>Digital Check in Enhance Stay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>