ELS Code/main/default/objects/Survey__c/fields/Ease_of_Digital_Check_in__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Digital_Check_in__c</fullName>
    <label>Ease of Digital Check-in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>