ELS Code/main/default/objects/Survey__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>