ELS Code/main/default/objects/Survey__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <length>225</length>
    <type>Text</type>
</CustomField>