ELS Code/main/default/objects/Survey__c/fields/How_did_you_make_your_reservation__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_make_your_reservation__c</fullName>
    <label>How did you make your reservation?</label>
    <type>TextArea</type>
</CustomField>