ELS Code/main/default/objects/Survey__c/fields/IgnScor__c.field-meta.xml
<CustomField>
    <fullName>IgnScor__c</fullName>
    <label>IgnScor</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>