ELS Code/main/default/objects/Survey__c/fields/Is_Rental__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental__c</fullName>
    <formula>Reservation_ID__r.Unit_Is_Rental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rental</label>
    <type>Text</type>
</CustomField>