ELS Code/main/default/objects/Survey__c/fields/Loyalty_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Number__c</fullName>
    <label>Loyalty Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>