ELS Code/main/default/objects/Survey__c/fields/Need_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>Need_Kitchen__c</fullName>
    <label>Need Kitchen</label>
    <length>225</length>
    <type>Text</type>
</CustomField>