ELS Code/main/default/objects/Survey__c/fields/Need_Meeting_Hall__c.field-meta.xml
<CustomField>
    <fullName>Need_Meeting_Hall__c</fullName>
    <label>Need Meeting Hall</label>
    <length>225</length>
    <type>Text</type>
</CustomField>