ELS Code/main/default/objects/Survey__c/fields/New_Rate_Class_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Class_Group__c</fullName>
    <formula>TEXT(Reservation_ID__r.New_Rate_Class_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Rate Class Group</label>
    <type>Text</type>
</CustomField>