ELS Code/main/default/objects/Survey__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>Net Promoter Score Number</description>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>