ELS Code/main/default/objects/Survey__c/fields/Number_of_RVS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RVS__c</fullName>
    <label>Number of RVS</label>
    <length>225</length>
    <type>Text</type>
</CustomField>