ELS Code/main/default/objects/Survey__c/fields/On_Site_Staff_Number__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Staff_Number__c</fullName>
    <formula>VALUE(TEXT( Rating_On_Site_Staff__c ))</formula>
    <label>On Site Staff Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>