ELS Code/main/default/objects/Survey__c/fields/OwnFName__c.field-meta.xml
<CustomField>
    <fullName>OwnFName__c</fullName>
    <label>OwnFName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>