ELS Code/main/default/objects/Survey__c/fields/OwnLName__c.field-meta.xml
<CustomField>
    <fullName>OwnLName__c</fullName>
    <label>OwnLName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>