ELS Code/main/default/objects/Survey__c/fields/Preferred_Hookups__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Hookups__c</fullName>
    <label>Preferred Hookups</label>
    <length>225</length>
    <type>Text</type>
</CustomField>