ELS Code/main/default/objects/Survey__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <formula>Reservation_ID__r.Property_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property</label>
    <type>Text</type>
</CustomField>