ELS Code/main/default/objects/Survey__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <label>Property City</label>
    <type>TextArea</type>
</CustomField>