ELS Code/main/default/objects/Survey__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>Property State</label>
    <type>TextArea</type>
</CustomField>