ELS Code/main/default/objects/Survey__c/fields/Property_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address_2__c</fullName>
    <label>Property Street Address</label>
    <type>TextArea</type>
</CustomField>