ELS Code/main/default/objects/Survey__c/fields/Q100__c.field-meta.xml
<CustomField>
    <fullName>Q100__c</fullName>
    <label>Q100: How did you make your reservation?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>