ELS Code/main/default/objects/Survey__c/fields/Q101__c.field-meta.xml
<CustomField>
    <fullName>Q101__c</fullName>
    <description>How did you make your reservation other explanation?</description>
    <label>Q101: Other explanation of making res</label>
    <length>255</length>
    <type>Text</type>
</CustomField>