ELS Code/main/default/objects/Survey__c/fields/Q102__c.field-meta.xml
<CustomField>
    <fullName>Q102__c</fullName>
    <label>Q102: Was it a snap to get done?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>