ELS Code/main/default/objects/Survey__c/fields/Rate_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Code__c</fullName>
    <label>Rate Plan Code</label>
    <type>TextArea</type>
</CustomField>