ELS Code/main/default/objects/Survey__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Third Party Rating</label>
    <type>TextArea</type>
</CustomField>