ELS Code/main/default/objects/Survey__c/fields/Rating_for_RV_Number__c.field-meta.xml
<CustomField>
    <fullName>Rating_for_RV_Number__c</fullName>
    <formula>value(text(Rating_of_RV__c))</formula>
    <label>Rating for RV Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>