ELS Code/main/default/objects/Survey__c/fields/Rating_On_Site_Staff__c.field-meta.xml
<CustomField>
    <fullName>Rating_On_Site_Staff__c</fullName>
    <label>Rating On Site Staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>