ELS Code/main/default/objects/Survey__c/fields/RedFlag__c.field-meta.xml
<CustomField>
    <fullName>RedFlag__c</fullName>
    <label>RedFlag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>