ELS Code/main/default/objects/Survey__c/fields/Reserv__c.field-meta.xml
<CustomField>
    <fullName>Reserv__c</fullName>
    <label>Reserv</label>
    <type>Url</type>
</CustomField>