ELS Code/main/default/objects/Survey__c/fields/Reservation_ID__c.field-meta.xml
<CustomField>
    <fullName>Reservation_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation Number</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>