ELS Code/main/default/objects/Survey__c/fields/Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Number__c</fullName>
    <formula>Reservation_ID__r.Rez_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation ID</label>
    <type>Text</type>
</CustomField>