ELS Code/main/default/objects/Survey__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <type>TextArea</type>
</CustomField>