ELS Code/main/default/objects/Survey__c/fields/Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Review_Link__c</fullName>
    <label>Review Link</label>
    <type>Url</type>
</CustomField>