ELS Code/main/default/objects/Survey__c/fields/Review_Site__c.field-meta.xml
<CustomField>
    <fullName>Review_Site__c</fullName>
    <label>Review Site</label>
    <type>TextArea</type>
</CustomField>