ELS Code/main/default/objects/Survey__c/fields/Review_Title__c.field-meta.xml
<CustomField>
    <fullName>Review_Title__c</fullName>
    <label>Review Title</label>
    <type>TextArea</type>
</CustomField>