ELS Code/main/default/objects/Survey__c/fields/Revinate_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Revinate_Collected_Date__c</fullName>
    <label>Revinate Collected Date</label>
    <type>Date</type>
</CustomField>