ELS Code/main/default/objects/Survey__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Site Type</label>
    <type>TextArea</type>
</CustomField>