ELS Code/main/default/objects/Survey__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Property Type</label>
    <type>TextArea</type>
</CustomField>