ELS Code/main/default/objects/Survey__c/fields/S_Id__c.field-meta.xml
<CustomField>
    <fullName>S_Id__c</fullName>
    <externalId>true</externalId>
    <label>S_Id</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>