ELS Code/main/default/objects/Survey__c/fields/SiteNam__c.field-meta.xml
<CustomField>
    <fullName>SiteNam__c</fullName>
    <label>SiteNam</label>
    <length>225</length>
    <type>Text</type>
</CustomField>