ELS Code/main/default/objects/Survey__c/fields/Staff_Empathy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Staff_Empathy_Rating__c</fullName>
    <label>Staff Empathy Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>