ELS Code/main/default/objects/Survey__c/fields/Staff_Enthusiasm_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Staff_Enthusiasm_Ratings__c</fullName>
    <label>Staff Enthusiasm Ratings</label>
    <length>20</length>
    <type>Text</type>
</CustomField>