ELS Code/main/default/objects/Survey__c/fields/Staff_Ownership_Rating__c.field-meta.xml
<CustomField>
    <fullName>Staff_Ownership_Rating__c</fullName>
    <label>Staff Ownership Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>