ELS Code/main/default/objects/Survey__c/fields/StorCode__c.field-meta.xml
<CustomField>
    <fullName>StorCode__c</fullName>
    <label>StorCode</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>