ELS Code/main/default/objects/Survey__c/fields/Subrating_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Cleanliness__c</fullName>
    <label>Subrating: Cleanliness</label>
    <type>TextArea</type>
</CustomField>