ELS Code/main/default/objects/Survey__c/fields/Subrating_Location__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Location__c</fullName>
    <label>Subrating: Location</label>
    <type>TextArea</type>
</CustomField>