ELS Code/main/default/objects/Survey__c/fields/Subrating_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Rooms__c</fullName>
    <label>Subrating: Rooms</label>
    <type>TextArea</type>
</CustomField>