ELS Code/main/default/objects/Survey__c/fields/Subrating_Service__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Service__c</fullName>
    <label>Subrating: Service</label>
    <type>TextArea</type>
</CustomField>