ELS Code/main/default/objects/Survey__c/fields/Subrating_Sleep_Quality__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Sleep_Quality__c</fullName>
    <label>Subrating: Sleep Quality</label>
    <type>TextArea</type>
</CustomField>