ELS Code/main/default/objects/Survey__c/fields/Subrating_Value__c.field-meta.xml
<CustomField>
    <fullName>Subrating_Value__c</fullName>
    <label>Subrating: Value</label>
    <type>TextArea</type>
</CustomField>