ELS Code/main/default/objects/Survey__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <label>Survey Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>