ELS Code/main/default/objects/Survey__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <type>TextArea</type>
</CustomField>