ELS Code/main/default/objects/Survey__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <type>TextArea</type>
</CustomField>