ELS Code/main/default/objects/Survey__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>