ELS Code/main/default/objects/Survey__c/fields/Unit_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Site_Number__c</fullName>
    <formula>Reservation_ID__r.Unit_Site_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Site Number</label>
    <type>Text</type>
</CustomField>