ELS Code/main/default/objects/Survey__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <label>Web Source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>