ELS Code/main/default/objects/Survey__c/recordTypes/Customerville.recordType-meta.xml
<RecordType>
    <fullName>Customerville</fullName>
    <active>true</active>
    <description>Record type for all Customerville surveys (surveys prior to Revinate)</description>
    <label>Customerville</label>
</RecordType>