ELS Code/main/default/objects/Survey__c/recordTypes/Revinate_Survey.recordType-meta.xml
<RecordType>
    <fullName>Revinate_Survey</fullName>
    <active>true</active>
    <description>Revinate Survey Record Type</description>
    <label>Revinate Survey</label>
</RecordType>