ELS Code/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NPS__c</columns>
    <columns>NAME</columns>
    <columns>Amenities__c</columns>
    <columns>Bathrooms_cleaned_and_stocked__c</columns>
    <columns>Cabin_Rating__c</columns>
    <columns>Grounds_and_buildings_cared_for__c</columns>
    <columns>Need_Kitchen__c</columns>
    <columns>Need_Meeting_Hall__c</columns>
    <columns>Rating_On_Site_Staff__c</columns>
    <columns>Staff_Communication_Rating__c</columns>
    <columns>Staff_Empathy_Rating__c</columns>
    <columns>Staff_Enthusiasm_Ratings__c</columns>
    <columns>Staff_Ownership_Rating__c</columns>
    <columns>Rating_for_Cabin_Rental__c</columns>
    <columns>Rating_of_RV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NPS__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>