ELS Code/main/default/objects/Survey__c/listViews/Surveys_Edited_Today.listView-meta.xml
<ListView>
    <fullName>Surveys_Edited_Today</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Reservation_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Surveys Edited Today</label>
</ListView>