ELS Code/main/default/objects/Survey__c/listViews/Surveys_Edited_Yesterday.listView-meta.xml
<ListView>
    <fullName>Surveys_Edited_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Reservation_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Surveys Edited Yesterday</label>
</ListView>